# abc-benchmark

./: LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/datasets/: cluster_count_full.csv
docs/: benchmark-spec.md
kaggle/notebooks/: abc-selective-attention-structure-text-task.ipynb  abc-selective-attention-utils.ipynb
kaggle/runners/: abc_sa_feature_text_counting.ipynb  abc_sa_feature_text_filtering.ipynb  abc_sa_feature_visual_counting.ipynb  abc_sa_feature_visual_filtering.ipynb  abc_sa_structure_sensitive_text_counting.ipynb  abc_sa_structure_text_counting.ipynb  abc_sa_structure_visual_counting.ipynb  abc_sa_structure_visual_filtering.ipynb  abc_selective_attention_structure_sensitive_text_counting.ipynb  (+1 more)
kaggle/shared/: abc_selective_attention_utils.ipynb  (+1 more)
scripts/: copy_logs.ps1  copy_logs.sh  dataset_viewer.py  generate_cluster_dataset.py  generate_cluster_samples.py  generate_feature_dataset.py  generate_feature_text_dataset.py  generate_feature_text_datasets_v2.py  generate_sa_feature_text_datasets.py  generate_sa_feature_visual_dataset.py  generate_sa_feature_visual_datasets.py  generate_sa_structure_text_datasets.py  generate_sa_structure_visual_datasets.py  generate_selective_attention_feature_sensitive_text_datasets.py  generate_selective_attention_feature_visual_dataset.py  generate_selective_attention_structure_sensitive_text_datasets.py  generate_selective_attention_structure_visual_dataset.py  generate_structure_text_datasets.py  generate_text_samples.py  package_datasets.sh
tests/: test_cluster_generator.py  test_gold_labels.py
(+271 files in other folders)
